[tool.poetry]
name = "bintray_backup"
version = "0.1.0"
description = ""
authors = ["cob16 <public+github@cormacbrady.info>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
progress = "^1.5"
tenacity = "^6.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
httpretty = "^1.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
